change the code
the path modified

--- a/Folium map.ipynb
+++ b/Folium map.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "import glob\n",
-    "path=r'Shapefile'\n",
+    "path=r'census_shp'\n",
     "\n",
     "file=glob.glob(os.path.join(path, 'cb_2018_**_tract_500k.shp'))\n",
     "# print(file)\n",
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp = pd.read_csv('Exposure_0412.csv', dtype = {'State':str,\"GEOID\":str})\n",
+    "exp = pd.read_csv('census_data/exposure_census.csv', dtype = {'State':str,\"GEOID\":str})\n",
     "exp = exp.rename(columns = {'min-max':'Exposure Score'})\n",
     "exp = exp[['GEOID', 'Exposure Score']]\n",
     "exp.head()"
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sens = pd.read_csv(\"Sensitivity-0409.csv\", dtype={\"Geocode\": str})\n",
+    "sens = pd.read_csv(\"census_data/sensitivity_census.csv\", dtype={\"Geocode\": str})\n",
     "sens = sens.rename(columns = {'min_max_sens':'Sensitivity Score', 'Geocode':'GEOID'})\n",
     "sens = sens[['GEOID', 'Sensitivity Score']]\n",
     "sens.head()"
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ac = pd.read_csv('all_ac_data_0516.csv', dtype={\"GEO_ID\":str})\n",
+    "ac = pd.read_csv('census_data/adaptive_capacity_census.csv', dtype={\"GEO_ID\":str})\n",
     "ac = ac.rename(columns = {'AC_score':'Adaptive Capacity Score', 'GEO_ID':'GEOID'})\n",
     "ac = ac[['GEOID', 'Adaptive Capacity Score']]\n",
     "ac.head()"
