--- a/USA.ipynb
+++ b/USA.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "import glob\n",
-    "path=r'Shapefile'\n",
+    "path=r'census_shp'\n",
     "\n",
     "file=glob.glob(os.path.join(path, 'cb_2018_**_tract_500k.shp'))\n",
     "# print(file)\n",
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "## Import the state boundaries\n",
-    "state_boundary = gpd.read_file('cb_2018_us_state_500k/cb_2018_us_state_500k.shp')\n",
+    "state_boundary = gpd.read_file('state_shp/cb_2018_us_state_500k.shp')\n",
     "state_boundary.plot()"
    ]
   },
@@ -161,7 +161,7 @@
    "source": [
     "## Import data\n",
     "\n",
-    "exposure = pd.read_csv('Exposure_0412.csv', dtype = {'State':str,\"GEOID\":str,\"GEO_ID\":str})\n",
+    "exposure = pd.read_csv('census_data/exposure_census.csv', dtype = {'State':str,\"GEOID\":str,\"GEO_ID\":str})\n",
     "exposure.head()"
    ]
   },
@@ -383,7 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensitivity = pd.read_csv(\"Sensitivity-0409.csv\", dtype={\"Geocode\": str})"
+    "sensitivity = pd.read_csv(\"census_data/sensitivity_census.csv\", dtype={\"Geocode\": str})"
    ]
   },
   {
@@ -555,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adaptive_capacity = pd.read_csv('all_ac_data_0516.csv',dtype={\"GEO_ID\":str})\n",
+    "adaptive_capacity = pd.read_csv('census_data/adaptive_capcacity_census.csv',dtype={\"GEO_ID\":str})\n",
     "adaptive_capacity.head()"
    ]
   },
@@ -813,412 +813,6 @@
     "\n",
     "fig.savefig('Figures/Vul_score_add.png', facecolor='w', dpi=500)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Weight Testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted = pd.merge(e, s, on=\"GEOID\")\n",
-    "vul_weidghted = pd.merge(vul_weidghted, ac, on=\"GEOID\")\n",
-    "vul_weidghted.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted.fillna(0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# min-max: exposure, min_max_sens: sensitivity; AC_score: adaptive capacity\n",
-    "# Suppose the weight are 0.6 , 0.2, 0.2\n",
-    "vul_weidghted['vul_mulpi_622'] = vul_weidghted.apply(lambda x: 1.8*x[\"min-max\"]*(0.6*x[\"min_max_sens\"]-0.6*x[\"AC_score\"]), axis=1)\n",
-    "vul_weidghted['vul_add_622'] = vul_weidghted.apply(lambda x: 1.8*x[\"min-max\"]+0.6*x[\"min_max_sens\"]-0.6*x[\"AC_score\"], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted['vul_mulpi_622'].corr(vulnerablity['vul_score_mulpi'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted['vul_add_622'].corr(vulnerablity['vul_score_add'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Suppose the weight are 0.2 , 0.6, 0.2\n",
-    "vul_weidghted['vul_mulpi_262'] = vul_weidghted.apply(lambda x: 0.6*x[\"min-max\"]*(1.8*x[\"min_max_sens\"]-0.6*x[\"AC_score\"]), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted['vul_add_262'] = vul_weidghted.apply(lambda x: 0.2*x[\"min-max\"]+0.6*x[\"min_max_sens\"]-0.2*x[\"AC_score\"], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted['vul_mulpi_262'].corr(vulnerablity['vul_score_mulpi'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted['vul_add_262'].corr(vulnerablity['vul_score_add'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Suppose the weight are 0.2 , 0.2, 0.6\n",
-    "vul_weidghted['vul_mulpi_226'] = vul_weidghted.apply(lambda x: 0.2*x[\"min-max\"]*(0.2*x[\"min_max_sens\"]-0.6*x[\"AC_score\"]), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted['vul_add_226'] = vul_weidghted.apply(lambda x: 0.2*x[\"min-max\"]+0.2*x[\"min_max_sens\"]-0.6*x[\"AC_score\"], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted['vul_mulpi_226'].corr(vulnerablity['vul_score_mulpi'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted['vul_add_226'].corr(vulnerablity['vul_score_add'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_weidghted.to_excel('vul_weidght_test.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# EV Adoption in IL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv_ev_ex = pd.read_excel('IL CV-EV/IL_CV2EV_base.xlsx',dtype={'CountyFIPs':str})\n",
-    "cv_ev_ex.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ex_IL = cv_ev_ex[['CountyFIPs','County', '2020_CV Costexpo_nor', '2030_CV Costexpo_nor',\n",
-    "               '2040_CV Costexpo_nor','2050_CV Costexpo_nor','2020_EV Costexpo_nor','2030_EV Costexpo_nor',\n",
-    "               '2040_EV Costexpo_nor','2050_EV Costexpo_nor']]\n",
-    "ex_IL.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s_IL = sensitivity_map[['GEOID','min_max_sens']]\n",
-    "ac_IL = adaptive_capacity_map[['GEOID','AC_score']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop = pd.read_csv('IL CV-EV/latch_2017.csv',dtype={'geocode':str})\n",
-    "for i in range(len(pop)):\n",
-    "    pop.loc[i,'geocode'] = pop.loc[i,'geocode'].zfill(11)\n",
-    "pop.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col_name=pop.columns.tolist()\n",
-    "col_name.insert(1,'StateFIPs')\n",
-    "col_name.insert(2,'CountyFIPs')\n",
-    "col_name.insert(3,'CountyPOP')\n",
-    "pop=pop.reindex(columns=col_name)\n",
-    "for i in range(len(pop)):\n",
-    "    pop.loc[i,'StateFIPs'] = str(pop.loc[i,'geocode'])[:2]\n",
-    "    pop.loc[i,'CountyFIPs'] = str(pop.loc[i,'geocode'])[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_IL = pop[(pop.StateFIPs == \"17\")]\n",
-    "pop_IL = pop_IL.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_county = pop_IL.groupby(['CountyFIPs'])[['tot_pop']].sum()\n",
-    "pop_county = pop_county.reset_index()\n",
-    "pop_county.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(len(pop_IL)):\n",
-    "    for j in range(len(pop_county)):\n",
-    "        if pop_IL.loc[i,'CountyFIPs'] == pop_county.loc[j,'CountyFIPs']:\n",
-    "            pop_IL.loc[i,'CountyPOP'] = pop_county.loc[j,'tot_pop']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_IL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s_IL = pd.merge(s_IL,pop_IL,left_on='GEOID',right_on='geocode',how=\"left\")\n",
-    "ac_IL = pd.merge(ac_IL,pop_IL,left_on='GEOID',right_on='geocode',how=\"left\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s_IL = s_IL[(s_IL.StateFIPs == \"17\")]\n",
-    "ac_IL = ac_IL[(ac_IL.StateFIPs == \"17\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s_IL['sens-new'] = s_IL.apply(lambda x: x['min_max_sens'] * (x['tot_pop']/x['CountyPOP']),axis=1)\n",
-    "ac_IL['ac-new'] = ac_IL.apply(lambda x: x['AC_score'] * (x['tot_pop']/x['CountyPOP']),axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s_county = s_IL.groupby(['CountyFIPs'])[['sens-new']].sum()\n",
-    "s_county.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ac_county = ac_IL.groupby(['CountyFIPs'])[['ac-new']].sum()\n",
-    "ac_county.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s_county = s_county.reset_index()\n",
-    "ac_county = ac_county.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "minsens = s_county['sens-new'].min()\n",
-    "maxsens = s_county['sens-new'].max()\n",
-    "minac = ac_county['ac-new'].min()\n",
-    "maxac = ac_county['ac-new'].max()\n",
-    "s_county['sens-new'] = s_county.apply(lambda x: (x['sens-new'] - minsens)/(maxsens-minsens),axis=1)\n",
-    "ac_county['ac-new'] = ac_county.apply(lambda x: (x['ac-new'] - minac)/(maxac-minac),axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "ac_county.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_score = pd.merge(ex_IL,s_county,on='CountyFIPs')\n",
-    "vul_score = pd.merge(vul_score,ac_county,on='CountyFIPs')\n",
-    "vul_score.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "vul_score.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_score.fillna(0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_score['2020CV'] = vul_score.apply(lambda x: x[\"2020_CV Costexpo_nor\"]*(x[\"sens-new\"]-x[\"ac-new\"]), axis=1)\n",
-    "vul_score['2030CV'] = vul_score.apply(lambda x: x[\"2030_CV Costexpo_nor\"]*(x[\"sens-new\"]-x[\"ac-new\"]), axis=1)\n",
-    "vul_score['2040CV'] = vul_score.apply(lambda x: x[\"2040_CV Costexpo_nor\"]*(x[\"sens-new\"]-x[\"ac-new\"]), axis=1)\n",
-    "vul_score['2050CV'] = vul_score.apply(lambda x: x[\"2050_CV Costexpo_nor\"]*(x[\"sens-new\"]-x[\"ac-new\"]), axis=1)\n",
-    "vul_score['2020EV'] = vul_score.apply(lambda x: x[\"2020_EV Costexpo_nor\"]*(x[\"sens-new\"]-x[\"ac-new\"]), axis=1)\n",
-    "vul_score['2030EV'] = vul_score.apply(lambda x: x[\"2030_EV Costexpo_nor\"]*(x[\"sens-new\"]-x[\"ac-new\"]), axis=1)\n",
-    "vul_score['2040EV'] = vul_score.apply(lambda x: x[\"2040_EV Costexpo_nor\"]*(x[\"sens-new\"]-x[\"ac-new\"]), axis=1)\n",
-    "vul_score['2050EV'] = vul_score.apply(lambda x: x[\"2050_EV Costexpo_nor\"]*(x[\"sens-new\"]-x[\"ac-new\"]), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_score.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vul_score.to_excel('IL CV-EV/vul_score CV-EV_base.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
