--- a/Chicago Analysis/Chicago.ipynb
+++ b/Chicago Analysis/Chicago.ipynb
@@ -619,8 +619,8 @@
     "    legend_kwds={'loc': 'center left',\n",
     "                 'title': 'Vulnerability Score',\n",
     "                 \"fmt\": \"{:.3f}\",\n",
-    "                 'title_fontsize': 14, # 图例标题字体大小\n",
-    "                 'fontsize': 14, # 图例非标题外字体大小\n",
+    "                 'title_fontsize': 14, \n",
+    "                 'fontsize': 14, \n",
     "                 'shadow': True},\n",
     "#     missing_kwds={\n",
     "#                  \"color\": \"lightgrey\",\n",
@@ -683,8 +683,8 @@
     "                 'title': 'Vulnerability Score',\n",
     "                 \"fmt\": \"{:.3f}\",\n",
     "                 \n",
-    "                 'title_fontsize': 14, # 图例标题字体大小\n",
-    "                 'fontsize': 14, # 图例非标题外字体大小\n",
+    "                 'title_fontsize': 14, \n",
+    "                 'fontsize': 14, \n",
     "                 'shadow': True},\n",
     "#     missing_kwds={\n",
     "#                  \"color\": \"lightgrey\",\n",
