--- a/NY Analysis/NY.ipynb
+++ b/NY Analysis/NY.ipynb
@@ -148,8 +148,8 @@
     "    legend_kwds={'loc': 'lower left',\n",
     "                 'title': 'Exposure',\n",
     "                 \"fmt\": \"{:.3f}\",\n",
-    "                 'title_fontsize': 14, # 图例标题字体大小\n",
-    "                 'fontsize': 11, # 图例非标题外字体大小\n",
+    "                 'title_fontsize': 14, \n",
+    "                 'fontsize': 11, \n",
     "                 'shadow': True\n",
     "                },               \n",
     "    missing_kwds={\n",
@@ -586,8 +586,8 @@
     "                 'title': 'Vulnerability Score',\n",
     "                 \"fmt\": \"{:.3f}\",\n",
     "                 \n",
-    "                 'title_fontsize': 14, # 图例标题字体大小\n",
-    "                 'fontsize': 14, # 图例非标题外字体大小\n",
+    "                 'title_fontsize': 14, \n",
+    "                 'fontsize': 14, \n",
     "                 'shadow': True},\n",
     "#     missing_kwds={\n",
     "#                  \"color\": \"lightgrey\",\n",
@@ -650,8 +650,8 @@
     "                 'title': 'Vulnerability Score',\n",
     "                 \"fmt\": \"{:.3f}\",\n",
     "                 \n",
-    "                 'title_fontsize': 14, # 图例标题字体大小\n",
-    "                 'fontsize': 14, # 图例非标题外字体大小\n",
+    "                 'title_fontsize': 14, \n",
+    "                 'fontsize': 14, \n",
     "                 'shadow': True},\n",
     "#     missing_kwds={\n",
     "#                  \"color\": \"lightgrey\",\n",
